2002.08.26 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: change TDiary::DIRTY_NONE false to zero.
	* tdiary.rb: add CommentManager#each_visible_comment.
	* tdiary.conf.sample: referer_table update.

2002.08.25 TADA Tadashi <sho@spc.gr.jp>
	* defaultio.rb: fix about lost hidden comments at saving. thanks Mizuho <gha@intrastore.cdc.com>.
	* update.rhtml: change format of comments.

2002.08.22 TADA Tadashi <sho@spc.gr.jp>
	* defaultio.rb: untaint directory name in calendar method. thanks Mizuho <gha@intrastore.cdc.com>.

2002.08.16 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: create cache directory before using perser cache. thanks Mizuho <gha@intrastore.cdc.com>.
	* paragraph_anchor -> section_anchor.
	* theme: panchor -> sanchor.
	* tdiary.rb: @ignore_parser_cache for yasqeeze.

2002.08.13 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb, defaultio.rb pstoreio.rb: change intarface of io#transaction method.
	* diary#each_paragraph -> each_section
	* update.rhtml, defaultio.rb pstoreio.rb: to_text -> to_src.
	* HOWTO-make-io.html: add a document for IO class builders (cont.)

2002.08.07 TADA Tadashi <sho@spc.gr.jp>
	* update.rhtml: replace Diary#each_paragraph to Diary#to_text.

2002.08.06 TADA Tadashi <sho@spc.gr.jp>
	* diary.rhtml: remove commenttitle class.
	* tdiary.rb: call plugins after posting a comment.
	* tdiary.rb: use Plugin#anchor to make new location after posting comment.

2002.08.05 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb, defaultio.rb: implement parser cache.
	* defaultio.rb: split modules CommentIO and RefererIO.
	* tdiary.rb, defaultio.rb: optimize dirty flags.

2002.07.25 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: fix of bad fragment of redirection after posting comment. thanks NT.
	* diary.rhtml: separate CR/LF in comments by <br>: try again.
	* append text when the target diary existed on replace mode (porting from Rev.1.31.2.4).

2002.07.24 TADA Tadashi <sho@spc.gr.jp>
	* index.rb, tdiary.rb: redirect to day page after posting comment.